// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button101 danger 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <button
      className="integration button btn btn-lg btn-danger"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Custom label
    </button>
  </div>
</div>
`;

exports[`Storyshots Button101 default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <button
      className="integration button btn btn-lg btn-info"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Bluenove
    </button>
  </div>
</div>
`;

exports[`Storyshots Button101 disabled 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <button
      className="integration button btn btn-lg btn-info"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Bluenove
    </button>
  </div>
</div>
`;

exports[`Storyshots Checkbox101 default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="integration checkbox"
    >
      <input
        id="checkbox"
        type="checkbox"
      />
      <label
        htmlFor="checkbox"
      >
        Default
      </label>
    </div>
  </div>
</div>
`;
